test/should-fail/vsgc2797.f3
/**
 * Should-fail test for VSGC-2797 : instanceof issue
 *
 * @test/compile-error
 */

var str1 = "hello";
println(str1 instanceof String);
println(str1 instanceof java.lang.Integer);
